@@ -1,3 +1,8 @@
+22/06/2011 OsiCpx
+  - fix handling of primal/dual objective limit so it correctly takes objoffset into account
+  - preserve objective sense also when empty model is loaded
+  - make sure getWarmStart returns proper atlower/atupper status for inequalities
+
 13/06/2011 OsiCommonTest, unittest
   - removed now redundant counting of unittest failures, so test functions now return void 
 
